[gd_scene load_steps=6 format=2]

[ext_resource path="res://opponent.gd" type="Script" id=1]
[ext_resource path="res://retrogaming.tres" type="DynamicFont" id=2]
[ext_resource path="res://elecreetileset.tres" type="TileSet" id=3]
[ext_resource path="res://infoboxes.gd" type="Script" id=4]
[ext_resource path="res://player_elecree.gd" type="Script" id=5]

[node name="Battle" type="Node2D"]
script = ExtResource( 4 )

[node name="CanvasLayer" type="CanvasLayer" parent="."]

[node name="BG" type="TileMap" parent="CanvasLayer"]
tile_set = ExtResource( 3 )
cell_size = Vector2( 16, 16 )
format = 1
tile_data = PoolIntArray( 0, 101, 0, 1, 101, 0, 2, 101, 0, 3, 101, 0, 4, 101, 0, 5, 101, 0, 6, 101, 0, 7, 101, 0, 8, 101, 0, 9, 101, 0, 10, 101, 0, 11, 101, 0, 12, 101, 0, 13, 101, 0, 14, 101, 0, 65536, 101, 0, 65537, 101, 0, 65538, 101, 0, 65539, 101, 0, 65540, 101, 0, 65541, 101, 0, 65542, 101, 0, 65543, 101, 0, 65544, 101, 0, 65545, 101, 0, 65546, 101, 0, 65547, 101, 0, 65548, 101, 0, 65549, 101, 0, 65550, 101, 0, 131072, 101, 0, 131073, 101, 0, 131074, 101, 0, 131075, 101, 0, 131076, 101, 0, 131077, 101, 0, 131078, 101, 0, 131079, 101, 0, 131080, 101, 0, 131081, 101, 0, 131082, 101, 0, 131083, 101, 0, 131084, 101, 0, 131085, 101, 0, 131086, 101, 0, 196608, 101, 0, 196609, 101, 0, 196610, 101, 0, 196611, 101, 0, 196612, 101, 0, 196613, 101, 0, 196614, 101, 0, 196615, 101, 0, 196616, 101, 0, 196617, 101, 0, 196618, 101, 0, 196619, 101, 0, 196620, 101, 0, 196621, 101, 0, 196622, 101, 0, 262144, 101, 0, 262145, 101, 0, 262146, 101, 0, 262147, 101, 0, 262148, 101, 0, 262149, 101, 0, 262150, 101, 0, 262151, 101, 0, 262152, 101, 0, 262153, 101, 0, 262154, 101, 0, 262155, 101, 0, 262156, 101, 0, 262157, 101, 0, 262158, 101, 0, 327680, 101, 0, 327681, 101, 0, 327682, 101, 0, 327683, 101, 0, 327684, 101, 0, 327685, 101, 0, 327686, 101, 0, 327687, 101, 0, 327688, 101, 0, 327689, 101, 0, 327690, 101, 0, 327691, 101, 0, 327692, 101, 0, 327693, 101, 0, 327694, 101, 0, 393216, 101, 0, 393217, 101, 0, 393218, 101, 0, 393219, 101, 0, 393220, 101, 0, 393221, 101, 0, 393222, 101, 0, 393223, 101, 0, 393224, 101, 0, 393225, 101, 0, 393226, 101, 0, 393227, 101, 0, 393228, 101, 0, 393229, 101, 0, 393230, 101, 0, 458752, 101, 0, 458753, 101, 0, 458754, 101, 0, 458755, 101, 0, 458756, 101, 0, 458757, 101, 0, 458758, 101, 0, 458759, 101, 0, 458760, 101, 0, 458761, 101, 0, 458762, 101, 0, 458763, 101, 0, 458764, 101, 0, 458765, 101, 0, 458766, 101, 0, 524288, 101, 0, 524289, 101, 0, 524290, 101, 0, 524291, 101, 0, 524292, 101, 0, 524293, 101, 0, 524294, 101, 0, 524295, 101, 0, 524296, 101, 0, 524297, 101, 0, 524298, 101, 0, 524299, 101, 0, 524300, 101, 0, 524301, 101, 0, 524302, 101, 0, 589824, 101, 0, 589825, 101, 0, 589826, 101, 0, 589827, 101, 0, 589828, 101, 0, 589829, 101, 0, 589830, 101, 0, 589831, 101, 0, 589832, 101, 0, 589833, 101, 0, 589834, 101, 0, 589835, 101, 0, 589836, 101, 0, 589837, 101, 0, 589838, 101, 0 )

[node name="TileMap" type="TileMap" parent="CanvasLayer"]
tile_set = ExtResource( 3 )
cell_size = Vector2( 16, 16 )
format = 1
tile_data = PoolIntArray( 0, 99, 0, 1, 97, 0, 2, 97, 0, 3, 97, 0, 4, 97, 0, 5, 97, 0, 6, 97, 0, 7, 97, 0, 8, 97, 0, 9, 97, 0, 10, 97, 0, 11, 97, 0, 12, 97, 0, 13, 97, 0, 14, 98, 0, 65545, 99, 0, 65546, 97, 0, 65547, 97, 0, 65548, 97, 0, 65549, 97, 0, 65550, 98, 0, 327680, 99, 0, 327681, 97, 0, 327682, 97, 0, 327683, 97, 0, 327684, 97, 0, 327685, 98, 0, 393216, 87, 0, 393217, 88, 0, 393218, 88, 0, 393219, 88, 0, 393220, 88, 0, 393221, 88, 0, 393222, 88, 0, 393223, 88, 0, 393224, 88, 0, 393225, 88, 0, 393226, 88, 0, 393227, 88, 0, 393228, 88, 0, 393229, 88, 0, 393230, 89, 0, 458752, 90, 0, 458753, 91, 0, 458754, 91, 0, 458755, 91, 0, 458756, 91, 0, 458757, 91, 0, 458758, 91, 0, 458759, 91, 0, 458760, 91, 0, 458761, 91, 0, 458762, 91, 0, 458763, 91, 0, 458764, 91, 0, 458765, 91, 0, 458766, 92, 0, 524288, 90, 0, 524289, 91, 0, 524290, 91, 0, 524291, 91, 0, 524292, 91, 0, 524293, 91, 0, 524294, 91, 0, 524295, 91, 0, 524296, 91, 0, 524297, 91, 0, 524298, 91, 0, 524299, 91, 0, 524300, 91, 0, 524301, 91, 0, 524302, 92, 0, 589824, 93, 0, 589825, 94, 0, 589826, 94, 0, 589827, 94, 0, 589828, 94, 0, 589829, 94, 0, 589830, 94, 0, 589831, 94, 0, 589832, 94, 0, 589833, 94, 0, 589834, 94, 0, 589835, 94, 0, 589836, 94, 0, 589837, 94, 0, 589838, 95, 0 )

[node name="InfoBox" type="VBoxContainer" parent="CanvasLayer"]
margin_top = 96.0
margin_right = 240.0
margin_bottom = 160.0

[node name="HBoxContainer" type="HBoxContainer" parent="CanvasLayer/InfoBox"]
margin_right = 240.0
margin_bottom = 16.0

[node name="Name" type="Label" parent="CanvasLayer/InfoBox/HBoxContainer"]
margin_right = 55.0
margin_bottom = 16.0
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_fonts/font = ExtResource( 2 )
text = "Mizukoi"

[node name="Level" type="Label" parent="CanvasLayer/InfoBox/HBoxContainer"]
margin_left = 59.0
margin_right = 81.0
margin_bottom = 16.0
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_fonts/font = ExtResource( 2 )
text = ":L3"

[node name="Status" type="Label" parent="CanvasLayer/InfoBox/HBoxContainer"]
margin_left = 85.0
margin_right = 105.0
margin_bottom = 16.0
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_fonts/font = ExtResource( 2 )
text = "OK"

[node name="Recharge" type="Label" parent="CanvasLayer/InfoBox/HBoxContainer"]
margin_left = 109.0
margin_right = 135.0
margin_bottom = 16.0
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_fonts/font = ExtResource( 2 )
text = "100"

[node name="OpponentInfoBox" type="HBoxContainer" parent="CanvasLayer"]
margin_right = 240.0
margin_bottom = 16.0

[node name="Name" type="Label" parent="CanvasLayer/OpponentInfoBox"]
margin_right = 45.0
margin_bottom = 16.0
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_fonts/font = ExtResource( 2 )
text = "Watty"

[node name="Level" type="Label" parent="CanvasLayer/OpponentInfoBox"]
margin_left = 49.0
margin_right = 71.0
margin_bottom = 16.0
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_fonts/font = ExtResource( 2 )
text = ":L5"

[node name="Status" type="Label" parent="CanvasLayer/OpponentInfoBox"]
margin_left = 75.0
margin_right = 95.0
margin_bottom = 16.0
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_fonts/font = ExtResource( 2 )
text = "OK"

[node name="Recharge" type="Label" parent="CanvasLayer/OpponentInfoBox"]
margin_left = 99.0
margin_right = 125.0
margin_bottom = 16.0
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_fonts/font = ExtResource( 2 )
text = "100"

[node name="OpponentHPBox" type="HBoxContainer" parent="CanvasLayer"]
margin_left = 144.0
margin_top = 16.0
margin_right = 240.0
margin_bottom = 32.0

[node name="HP" type="Label" parent="CanvasLayer/OpponentHPBox"]
margin_right = 34.0
margin_bottom = 16.0
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_fonts/font = ExtResource( 2 )
text = "H:32"

[node name="SP" type="Label" parent="CanvasLayer/OpponentHPBox"]
margin_left = 38.0
margin_right = 72.0
margin_bottom = 16.0
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_fonts/font = ExtResource( 2 )
text = "S:35"

[node name="PlayerHPBox" type="HBoxContainer" parent="CanvasLayer"]
margin_top = 80.0
margin_right = 96.0
margin_bottom = 96.0

[node name="HP" type="Label" parent="CanvasLayer/PlayerHPBox"]
margin_right = 34.0
margin_bottom = 16.0
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_fonts/font = ExtResource( 2 )
text = "H:32"

[node name="SP" type="Label" parent="CanvasLayer/PlayerHPBox"]
margin_left = 38.0
margin_right = 72.0
margin_bottom = 16.0
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_fonts/font = ExtResource( 2 )
text = "S:35"

[node name="PlayerElecree" type="Node2D" parent="."]
script = ExtResource( 5 )

[node name="Sprite" type="Sprite" parent="PlayerElecree"]

[node name="OpposingElecree" type="Node2D" parent="."]
script = ExtResource( 1 )

[node name="Sprite" type="Sprite" parent="OpposingElecree"]
